--- a/conclusion.tex
+++ b/conclusion.tex
@@ -3,4 +3,4 @@
 
 Co se podařilo (i nepodařilo).
 
-Kam dál? (Syntetické gradienty, noisyReLU, flow \& user modely).
+Kam dál? (Syntetické gradienty, noisyReLU, flow \& user modely). Jak se potvrdila hypotéza, bylo dosaženo cíle? Adekvátnost metod.
