--- a/introduction.tex
+++ b/introduction.tex
@@ -1,4 +1,4 @@
 \chapter*{Úvod}
 \addcontentsline{toc}{chapter}{Úvod}
 
-Co je to za problém, proč ho řeším, jaký je přístup k řešení
+Co je to za problém, proč ho řeším, jaký je přístup k řešení, metody a postupy, cíle, hypotéza...
