--- a/zotero.bib
+++ b/zotero.bib
@@ -358,3 +358,29 @@
 	note = {Google-Books-{ID}: k2dQAAAAMAAJ},
 	keywords = {Mathematics / Probability \& Statistics / General, Psychology / Cognitive Psychology}
 }
+
+@article{chen_miles:_2006,
+	title = {{MILES}: Multiple-Instance Learning via Embedded Instance Selection},
+	volume = {28},
+	issn = {0162-8828},
+	doi = {10.1109/TPAMI.2006.248},
+	shorttitle = {{MILES}},
+	abstract = {Multiple-instance problems arise from the situations where training class labels are attached to sets of samples (named bags), instead of individual samples within each bag (called instances). Most previous multiple-instance learning ({MIL}) algorithms are developed based on the assumption that a bag is positive if and only if at least one of its instances is positive. Although the assumption works well in a drug activity prediction problem, it is rather restrictive for other applications, especially those in the computer vision area. We propose a learning method, {MILES} (multiple-instance learning via embedded instance selection), which converts the multiple-instance learning problem to a standard supervised learning problem that does not impose the assumption relating instance labels to bag labels. {MILES} maps each bag into a feature space defined by the instances in the training bags via an instance similarity measure. This feature mapping often provides a large number of redundant or irrelevant features. Hence, 1-norm {SVM} is applied to select important features as well as construct classifiers simultaneously. We have performed extensive experiments. In comparison with other methods, {MILES} demonstrates competitive classification accuracy, high computation efficiency, and robustness to labeling uncertainty},
+	pages = {1931--1947},
+	number = {12},
+	journaltitle = {{IEEE} Transactions on Pattern Analysis and Machine Intelligence},
+	author = {Chen, Yixin and Bi, Jinbo and Wang, J. Z.},
+	date = {2006-12},
+	keywords = {1-norm support vector machine, Algorithms, Application software, Artificial Intelligence, classification accuracy, computer vision, drug activity prediction, drug activity prediction., Drugs, embedded instance selection, feature extraction, feature mapping, feature subset selection, image categorization, Image Enhancement, Image Interpretation, Computer-Assisted, Imaging, Three-Dimensional, Information Storage and Retrieval, Labeling, labeling uncertainty, learning (artificial intelligence), Learning systems, {MILES}, Multiple-instance learning, multiple-instance learning algorithms, object recognition, pattern classification, Reproducibility of Results, Robustness, Sensitivity and Specificity, supervised learning, support vector machine, Support vector machine classification, support vector machines, Uncertainty},
+	file = {IEEE Xplore Abstract Record:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/MWZ5J8PU/1717454.html:text/html}
+}
+
+@inproceedings{zhu_1-norm_2004,
+	title = {1-norm support vector machines},
+	url = {http://papers.nips.cc/paper/2450-1-norm-support-vector-machines.pdf},
+	pages = {49--56},
+	booktitle = {Advances in neural information processing systems},
+	author = {Zhu, Ji and Rosset, Saharon and Tibshirani, Robert and Hastie, Trevor J.},
+	urldate = {2017-07-01},
+	date = {2004}
+}
