--- a/preamble.tex
+++ b/preamble.tex
@@ -14,6 +14,7 @@
 \usepackage{setspace}
 \usepackage{hyperref}
 \usepackage[ocgcolorlinks]{ocgx2}
+\usepackage{braket}
 
 \geometry{tmargin=4cm,bmargin=3cm,lmargin=3cm,rmargin=2cm,headheight=0.8cm,headsep=1cm,footskip=0.5cm,marginparwidth=1.6cm}
 \setdefaultlanguage{czech}
